# copper

./: .env.example  .gitignore  Dockerfile  Modelfile  Modelfile.gemma4  README.md  SUMMARY.md  copper.postman_collection.json  docker-compose.yml  pyproject.toml
docs/: configuration.md
src/copper/: __init__.py  cli.py  config.py  server.py  watch.py
src/copper/api/: __init__.py  app.py  deps.py  models.py
src/copper/api/routes/: minds.py  workflows.py
src/copper/api/static/: style.css
src/copper/api/templates/: index.html
src/copper/core/: __init__.py  coppermind.py  wiki.py
src/copper/ingest/: __init__.py  base.py  image_describer.py  obsidian.py  pdf.py  plain.py  registry.py
src/copper/llm/: __init__.py  base.py  bridge_adapter.py  mock.py
src/copper/prompts/: __init__.py  assay.librarian.yaml  assay.user.yaml  image.visual.yaml  pdf.section.yaml  polish.archivist.yaml  polish.user.yaml  store.archivist.yaml  store.images.yaml  store.user.yaml  tap.archivist.yaml  tap.gamemaster.yaml  tap.inquisitor.yaml  tap.scholar.yaml  tap.user.yaml
src/copper/retrieval/: __init__.py  alloy.py  base.py  factory.py  hybrid.py  keyword.py  llm.py
src/copper/workflows/: __init__.py  polish.py  store.py  tap.py
tests/: test_api.py  test_coppermind.py  test_ingest.py  test_linking.py  test_watch.py  test_wiki.py  test_workflows.py
