[project]
name = "copper"
version = "0.1.0"
description = "Mentecobres: AI-maintained knowledge bases, inspired by Karpathy and the Cosmere"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0.3",
    "httpx>=0.25",
]

[project.scripts]
copper = "copper.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "isort>=5.12",
]
llm = [
    "core-llm-bridge @ file:///Users/ferveloz/data/projects/core-llm-bridge",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "isort>=5.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
ignore = ["E501", "E203"]
